Creacion página principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header class="header">
         <div class="header-content">
             <h1>Prácticas de Campus</h1>
-            <p>Colección de ejercicios y simulaciones interactivas</p>
         </div>
     </header>
     <main class="main-content">
@@ -22,7 +21,7 @@
             <div class="practice-card">
                 <h3>Simulación de Cafetería</h3>
                 <p>Una simulación interactiva que permite simular actividades en una cafetería</p>
-                <button type="button" class="practice-btn" data-folder="practica1">Práctica 1</button>
+                <button type="button" class="practice-btn" data-folder="EventLoop-Asincronicidad" id="Practica1">Práctica 1</button>
             </div>
             <!-- Espacio para añadir más prácticas -->
         </section>
