Creacion de funciones para pedidos

--- a/EventLoop-Asincronicidad/Practica1.html
+++ b/EventLoop-Asincronicidad/Practica1.html
@@ -195,15 +195,21 @@
                     En preparación
                 </h3>
                 <section class="event-area" id="in-Progress">
-                    
+                    <div class="selected-items event-area-head">
+                        <span>Nombre</span>
+                        <span>Tiempo de Espera</span>
+                    </div>
                 </section>
             </div>
             <div class="order-item">
-                <h3 class="order-tittle" id="order-Ready">
-                    Pedido listo
+                <h3 class="order-tittle">
+                    Status
                 </h3>
-                <section class="event-area">
-
+                <section class="event-area" id="order-Ready">
+                    <div class="selected-items event-area-head">
+                        <span>Nombre de pedido</span>
+                        <span class="status">Status</span>
+                    </div>
                 </section>
             </div>
         </section>
