Ejercicio de callbacks y JSON

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <button type="button" class="practice-btn" data-folder="EventLoop-Asincronicidad" id="Practica1">Práctica 1</button>
             </div>
             <!-- Espacio para añadir más prácticas -->
+            <div class="practice-card">
+                <h3>Biblioteca de libros</h3>
+                <p>Una aplicación de consola para gestionar inventario de libros en una biblioteca</p>
+                <button type="button" class="practice-btn" data-folder="Callbacks-JSON" id="Practica2">Práctica 1</button>
+            </div>
         </section>
     </main>
     <footer class="footer">
