--- a/Callbacks-JSON/Practica2.html
+++ b/Callbacks-JSON/Practica2.html
@@ -5,17 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Practica2.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Callbacks and JSON</title>
 </head>
-<body>
-    <div id="form-container">
-        <form id="form">
-            <input type="text" name="author" id="author-input" placeholder="Escribe el nombre del autor del libro">
-            <input type="text" name="book" id="book-input" placeholder="Escribe el nombre del libro">
-            <input type="text" name="genre" id="genre-input" placeholder="Escribe el género del libro">
-        </form>
-    </div>
-    <div id="container">
+<body class="bg-black">
+    <header class="p-3 bg-dark-subtle text-dark-emphasis">
+        <h1 class="h1">Biblioteca NIBI</h1>
+    </header>
+    <section class="bg-dark">
+        <div id="buttons-container" class="mt-1 mb-1">
+            <button id="show-books" class="btn btn-secondary mt-2 mb-3 w-100" type="button">Todos los libros</button>
+            <div id="options" class="btn-group-vertical mt-2 mb-2 w-100">
+                <input type="text" id="libros-select" class="form-control w-100" required placeholder="¿Qué estas buscando?">
+                <button class="btn btn-secondary w-100" type="button" id="select-button">Buscar en Libreria</button>
+                <button class="btn btn-secondary w-100" type="button" id="borrow-book">Pedir prestado</button>
+            </div>
+            <div id="return" class="btn-group-vertical mt-2 mb-2 w-100">
+                <input type="text" id="libros-return" class="form-control w-100" required placeholder="Titulo del libro a regresar">
+                <button class="btn btn-secondary w-100" type="button" id="return-book">Regresar un libro</button>
+            </div>
+            <button class="btn btn-secondary mt-2 mb-2 w-100" type="button" id="Add-book">Agregar un libro</button>
+        </div>
+        <div id="form-container" class="p-3 hidden">
+            <form id="form" class="bg-secondary border border-white border-2 rounded-5">
+                <input class="form-control mb-2" type="text" name="author" id="author-input" placeholder="Nombre del autor del libro" required>
+                <input class="form-control mb-2" type="text" name="book" id="book-input" placeholder="Nombre del libro" required>
+                <input class="form-control mb-2" type="text" name="genre" id="genre-input" placeholder="Género del libro" required>
+                <button class="btn btn-primary w-100" type="submit" id="form-submit">Agregar libro</button>
+            </form>
+        </div>
+    </section>
+    
+    <div id="container" class="p-3 mt-2 mb-2 bg-light-subtle text-light-emphasis">
 
     </div>
     <script src="./Practica2.js"></script>
