--- a/Callbacks-JSON/Practica2.html
+++ b/Callbacks-JSON/Practica2.html
@@ -11,6 +11,7 @@
 <body class="bg-black">
     <header class="p-3 bg-dark-subtle text-dark-emphasis">
         <h1 class="h1">Biblioteca NIBI</h1>
+        <button type="button" id="../index" class="btn">Inicio</button>
     </header>
     <section class="bg-dark">
         <div id="buttons-container" class="mt-1 mb-1">
