Creacion practica fetch y axios

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
                 <p>Una simulación interactiva que permite simular actividades en una cafetería</p>
                 <button type="button" class="practice-btn" data-folder="EventLoop-Asincronicidad" id="Practica1">Práctica 1</button>
             </div>
-            <!-- Espacio para añadir más prácticas -->
             <div class="practice-card">
-                <h3>Biblioteca de libros</h3>
+                <h3>Biblioteca</h3>
                 <p>Una aplicación de consola para gestionar inventario de libros en una biblioteca</p>
                 <button type="button" class="practice-btn" data-folder="Callbacks-JSON" id="Practica2">Práctica 2</button>
+            </div>
+            <div class="practice-card">
+                <h3>Tarjetas de Rick y Morty</h3>
+                <p>Una aplicación web donde nos comunicamos con la API de Rick y Morty para hacer tarjetas de los personajes</p>
+                <button type="button" class="practice-btn" data-folder="Fetch-Axios" id="Practica3">Práctica 3</button>
             </div>
         </section>
     </main>
