--- a/Callbacks-JSON/Practica2.html
+++ b/Callbacks-JSON/Practica2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./Practica2.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <title>Callbacks and JSON</title>
+    <title>Biblioteca</title>
 </head>
 <body class="bg-black">
     <header class="p-3 bg-dark-subtle text-dark-emphasis">
