Funciones de renderizado en Fetch y Axios

--- a/Fetch-Axios/Practica3.html
+++ b/Fetch-Axios/Practica3.html
@@ -26,20 +26,21 @@
         <section id="section-fetch" class="seccions">
             <h2>Fetch</h2>
             <div class="button-seccion">
-                <button type="button" class="btn btn-outline-warning" id="PrevBtnFetch">Anterior</button>
-                <button type="button" class="btn btn-outline-warning" id="NextBtnFetch">Siguiente</button>
+                <button type="button" class="btn btn-outline-warning" id="PrevBtnFetch" disabled>Anterior</button>
+                <button type="button" class="btn btn-outline-warning" id="NextBtnFetch" disabled>Siguiente</button>
             </div>
             <div id="data-container-fetch" class="characters-container"></div>
         </section>
         <section id="section-axios" class="seccions">
             <h2>Axios</h2>
             <div class="button-seccion">
-                <button type="button" class="btn btn-outline-warning" id="PrevBtnAxios">Anterior</button>
-                <button type="button" class="btn btn-outline-warning" id="NextBtnAxios">Siguiente</button>
+                <button type="button" class="btn btn-outline-warning" id="PrevBtnAxios" disabled>Anterior</button>
+                <button type="button" class="btn btn-outline-warning" id="NextBtnAxios" disabled>Siguiente</button>
             </div>
             <div id="data-container-axios" class="characters-container"></div>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./Practica3.js"></script>
 </body>
 </html>
